feat: expand api with invites, groups and members crud endpoints
